--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 asgiref==3.8.1
 attrs==23.2.0
 autobahn==23.6.2
@@ -13,16 +15,21 @@ Django==5.0.4
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+frozenlist==1.4.1
+http_ece==1.2.0
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
+multidict==6.0.5
 packaging==24.0
+py-vapid==1.9.1
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dotenv==1.0.1
+pywebpush==2.0.0
 requests==2.32.3
 service-identity==24.1.0
 setuptools==69.2.0
@@ -34,4 +41,5 @@ txaio==23.1.1
 typing_extensions==4.12.1
 tzdata==2024.1
 urllib3==2.2.1
+yarl==1.9.4
 zope.interface==6.4.post2
